--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                             <a href="#activity">活動内容</a>
                         </li>
                         <li>
-                            <a href="#information">情報</a>
+                            <a href="#history">歴史</a>
                         </li>
                         <li>
                             <a href="#place">活動場所</a>
@@ -78,7 +78,7 @@
                             <label for="header_menu-btn-check" onclick="location.href='#activity'">活動内容</label>
                         </li>
                         <li>
-                            <label for="header_menu-btn-check" onclick="location.href='#information'">情報</label>
+                            <label for="header_menu-btn-check" onclick="location.href='#history'">歴史</label>
                         </li>
                         <li>
                             <label for="header_menu-btn-check" onclick="location.href='#place'">活動場所</label>
@@ -138,10 +138,8 @@
             </section>
             <!-- 活動内容ここまで -->
 
-
-            <!-- Infomationここから -->
-
-            <section id="information">
+            <!-- 歴史ここから -->
+            <section id="history">
                 <div class="container">
                     <div class="row fade">
                         <div class="images">
@@ -153,32 +151,19 @@
                     <div class="row">
                         <div class="contents">
                             <div class="title fade">
-
-                                <h2 style="margin: 0">Information</h2>
-
-                                <p>サークル情報</p>
+                                <h2 style="margin: 0">History</h2>
+                                <p>歴史</p>
                             </div>
                             <div class="message fade">
-                                <table>
-                                    <tr>
-                                        <th>人数</th><td>150人以上</td>
-                                    </tr>
-                                    <tr>
-                                        <th>他大学</th><td>参加可能</td>
-                                    </tr>
-                                    <tr>
-                                        <th>設立</th><td>1960年</td>
-                                    </tr>
-                                    <tr>
-                                        <th>年会費</th><td>2,500円</td>
-                                    </tr>
-                                </table>
+                                <p>
+                                    1960年に設立された歴史の長いサークルです。サークルが長野に山小屋を所有、また性能のいい望遠鏡を何本も受け継いできました。
+                                </p>
                             </div>
                         </div>
                     </div>
                 </div>
             </section>
-            <!-- Infomationここまで -->
+            <!-- 歴史ここまで -->
 
             <!-- 活動風景ここから -->
             <section id="gallery">
